[tool.poetry]
name = "inf-quick-eyes"
version = "0.1.0"
description = ""
authors = ["Michael Youngchan CHO <michael.yc.cho@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
